@@ -1,3 +1,7 @@
+2015-06-11  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (get_key_buffer): Add some debugging code to make it
+	easy to see what codes a key stroke produces.
+
 2015-06-07  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/texinfo/nano.texi: Show the node with the command-line options
 	in the main menu, to make it easy to find.
